# HoloHashLib

./: .gitignore  .replit  CMakeLists.txt  Pasted-Here-s-a-requirements-document-draft-for-developing-a-C-20-library-incorporating-the-one-way-hologr-1730600236041.txt  README.md  replit.nix
.github/workflows/: ci.yml
benchmarks/: benchmark_main.cpp
examples/: advanced_usage.cpp  basic_usage.cpp
include/holohash/: benchmark.hpp  core.hpp  exceptions.hpp  hash.hpp  keychain.hpp  nonce.hpp  platform.hpp  types.hpp
tests/: test_hash.cpp  test_keychain.cpp  test_nonce.cpp  test_platform.cpp  test_security.cpp
